# PesoPulse

./: .env.example  .firebaserc  .gitignore  LICENSE  README.md  app.vue  eslint.config.mjs  firebase.json  nuxt.config.ts  package-lock.json  package.json  skills-lock.json  tailwind.config.js
api/: pyproject.toml  requirements.txt
api/app/: audit.py  config.py  limits.py  main.py  middleware.py
api/app/routes/: audit.py  auth.py  budgets.py  categories.py  goals.py  notifications.py  receipts.py  recurring.py  sharing.py  stats.py  transactions.py
app/: router.options.ts
assets/css/: main.css
components/: AddTransactionModal.vue  BottomNav.vue  BudgetRow.vue  CategoryDonut.vue  CategoryPicker.vue  DashboardMock.vue  EditTransactionModal.vue  FilterDrawer.vue  GoalCard.vue  Icon.vue  Logo.vue  MonthCalendar.vue  NotifPermissionBanner.vue  PeriodBurndown.vue  PeriodSwitcher.vue  ReauthModal.vue  ReceiptScanner.vue  SearchBar.vue  Skeleton.vue  SummaryCards.vue  ToastHost.vue  TransactionListItem.vue  TransactionRowSkeleton.vue  TrendBars.vue
components/skeletons/: BudgetsSkeleton.vue  CalendarSkeleton.vue  DashboardSkeleton.vue  GoalsSkeleton.vue  HistorySkeleton.vue  RecurringSkeleton.vue  StatsSkeleton.vue
composables/: useAddTransaction.ts  useApi.ts  useAuth.ts  useBudgetCheck.ts  useCache.ts  useFcm.ts  useInstallPrompt.ts  useNavStack.ts  usePeriod.ts  useReauthGate.ts  useTheme.ts  useToast.ts  useTxnFilters.ts
middleware/: auth.ts
pages/: auth.vue  budgets.vue  dashboard.vue  goals.vue  history.vue  index.vue  offline.vue  recurring.vue  settings.vue  stats.vue
pages/auth/: verify.vue
pages/shared/: [ownerId].vue
plugins/: firebase.client.ts
public/: firebase-messaging-sw.js
server/routes/: firebase-messaging-sw.js.ts
utils/: currency.ts  dateLabel.ts
