[project]
name = "pesopulse-api"
version = "1.0.0"
requires-python = ">=3.12"

[tool.ruff]
line-length = 110
target-version = "py312"
extend-exclude = ["venv", "__pycache__", ".pytest_cache", ".ruff_cache"]

[tool.ruff.lint]
# Strict-but-pragmatic rule set
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes (undefined names, unused imports)
  "I",    # isort (import ordering)
  "B",    # flake8-bugbear (likely bugs)
  "C4",   # flake8-comprehensions
  "UP",   # pyupgrade (modern Python idioms)
  "SIM",  # flake8-simplify
  "RET",  # flake8-return
  "PIE",  # flake8-pie
  "PL",   # pylint (subset)
  "RUF",  # ruff-specific rules
  "N",    # pep8-naming
  "S",    # flake8-bandit (security)
  "ASYNC",# flake8-async
]
ignore = [
  "E501",    # line-too-long handled by formatter
  "B008",    # function-call-in-default-arg (FastAPI Depends() pattern)
  "PLR0913", # too-many-arguments (FastAPI routes need many params)
  "PLR2004", # magic-value-comparison (HTTP status codes)
  "S101",    # assert (used in tests)
  "S104",    # hardcoded-bind-all-interfaces (uvicorn 0.0.0.0 is intentional)
  "RUF012",  # mutable-class-defaults (Pydantic config)
  "N805",    # first-arg-cls (Pydantic validators use cls/self differently)
  "PLR0911", # too-many-return-statements
  "PLR0912", # too-many-branches
  "PLR0915", # too-many-statements
]

[tool.ruff.lint.per-file-ignores]
"app/routes/*.py" = ["S105", "S106"]  # password/token strings in route logic

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true
